--- a/_data/config.json
+++ b/_data/config.json
@@ -12,7 +12,7 @@
         "has_primary_nav": true,
         "primary_nav_links": [
             {
-                "label": "Features",
+                "label": "Nosotros",
                 "url": "/features",
                 "style": "link"
             },
