--- a/_data/config.json
+++ b/_data/config.json
@@ -7,7 +7,7 @@
     "base_font": "serif",
     "header": {
         "title": "emocionLUZ",
-        "logo": "images/classic/logo.svg",
+        "logo": "images/LinkedIn_logo_EL.png",
         "logo_alt": "DIY logo",
         "has_primary_nav": true,
         "primary_nav_links": [
