config.json: updated logo_alt in header

--- a/_data/config.json
+++ b/_data/config.json
@@ -8,7 +8,7 @@
     "header": {
         "title": "emocionLUZ",
         "logo": "images/LinkedIn_logo_EL.png",
-        "logo_alt": "emocion logo",
+        "logo_alt": "emocionLUZ logo",
         "has_primary_nav": true,
         "primary_nav_links": [
             {
