config.json: updated label in primary_nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -17,7 +17,7 @@
                 "style": "link"
             },
             {
-                "label": "Pricing",
+                "label": "Precio",
                 "url": "/pricing",
                 "style": "link"
             },
