--- a/_data/config.json
+++ b/_data/config.json
@@ -22,7 +22,7 @@
                 "style": "link"
             },
             {
-                "label": "About",
+                "label": "Acerca ",
                 "url": "/about",
                 "style": "link"
             },
