config.json: updated label in primary_nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -22,7 +22,7 @@
                 "style": "link"
             },
             {
-                "label": "Acerca ",
+                "label": "Nosotros",
                 "url": "/about",
                 "style": "link"
             },
