config.json: updated label in primary_nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -32,7 +32,7 @@
                 "style": "link"
             },
             {
-                "label": "Style Guide",
+                "label": "Guia de estllo",
                 "url": "/style-guide",
                 "style": "link"
             }
