--- a/_data/config.json
+++ b/_data/config.json
@@ -58,7 +58,7 @@
         "anncmnt_id": "new-features"
     },
     "footer": {
-        "logo": "images/classic/logo.svg",
+        "logo": "images/LinkedIn_logo_EL.png",
         "logo_alt": "DIY logo",
         "has_primary_nav": true,
         "primary_nav_title": "Company",
