--- a/_data/config.json
+++ b/_data/config.json
@@ -61,7 +61,7 @@
         "logo": "images/LinkedIn_logo_EL.png",
         "logo_alt": "DIY logo",
         "has_primary_nav": true,
-        "primary_nav_title": "Company",
+        "primary_nav_title": "Compañia",
         "primary_nav_links": [
             {
                 "label": "About",
