config.json: updated label in primary_nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -64,7 +64,7 @@
         "primary_nav_title": "Compañia",
         "primary_nav_links": [
             {
-                "label": "About",
+                "label": "A ",
                 "url": "/about",
                 "style": "link"
             },
