--- a/_data/config.json
+++ b/_data/config.json
@@ -69,7 +69,7 @@
                 "style": "link"
             },
             {
-                "label": "Style Guide",
+                "label": "Guia de estilo",
                 "url": "/style-guide",
                 "style": "link"
             }
