config.json: updated label in secondary_nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -78,7 +78,7 @@
         "secondary_nav_title": "Blog",
         "secondary_nav_links": [
             {
-                "label": "News",
+                "label": "Novedades",
                 "url": "/blog/category/news",
                 "style": "link"
             },
