config.json: updated label in secondary_nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -88,7 +88,7 @@
                 "style": "link"
             },
             {
-                "label": "Tutorials",
+                "label": "Tutoriales",
                 "url": "/blog/category/tutorials",
                 "style": "link"
             }
