config.json: updated label in tertiary_nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -102,7 +102,7 @@
                 "style": "link"
             },
             {
-                "label": "Politica de privacidad",
+                "label": "Política de privacidad",
                 "url": "/privacy-policy",
                 "style": "link"
             }
