config.json: updated label in social_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -119,7 +119,7 @@
                 "new_window": true
             },
             {
-                "label": "GitHub",
+                "label": "Facebook",
                 "url": "https://github.com/",
                 "style": "link",
                 "has_icon": true,
