config.json: updated url in social_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -120,7 +120,7 @@
             },
             {
                 "label": "Facebook",
-                "url": "https://github.com/",
+                "url": "https://facebook.com",
                 "style": "link",
                 "has_icon": true,
                 "icon": "github",
