config.json: updated icon in social_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -123,7 +123,7 @@
                 "url": "https://facebook.com",
                 "style": "link",
                 "has_icon": true,
-                "icon": "github",
+                "icon": "facebook",
                 "icon_position": "center",
                 "new_window": true
             },
