config.json: updated label in secondary_nav_links

--- a/_data/config.json
+++ b/_data/config.json
@@ -45,7 +45,7 @@
                 "style": "link"
             },
             {
-                "label": "Va",
+                "label": "Co",
                 "url": "/pricing",
                 "style": "primary"
             }
