config.json: updated title

--- a/_data/config.json
+++ b/_data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "Stackbit DIY Theme",
+    "title": "emocionLUZ ",
     "layout_type": "boxed",
     "style": "classic",
     "palette": "green",
