config.json: updated title

--- a/_data/config.json
+++ b/_data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "emocionLUZ ",
+    "title": "emocionLUZ - Iluminación y Sistemas de Control Inteligentes",
     "layout_type": "boxed",
     "style": "classic",
     "palette": "green",
