--- a/_data/config.json
+++ b/_data/config.json
@@ -3,7 +3,7 @@
     "layout_type": "boxed",
     "style": "classic",
     "palette": "gray",
-    "mode": "light",
+    "mode": "dark",
     "base_font": "serif",
     "header": {
         "title": "emocionLUZ",
