--- a/_data/config.json
+++ b/_data/config.json
@@ -2,7 +2,7 @@
     "title": "emocionLUZ - Iluminación y Sistemas de Control Inteligentes",
     "layout_type": "boxed",
     "style": "classic",
-    "palette": "blue",
+    "palette": "red",
     "mode": "dark",
     "base_font": "serif",
     "header": {
